--- a/app/src/main/res/navigation/navigation_graph_tab_create_timenote.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_create_timenote.xml
@@ -4,6 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph_tab_5"
     app:startDestination="@id/createTimenote">
+    <navigation
+        android:id="@+id/navigation"
+        app:startDestination="@id/login">
+        <fragment
+            android:id="@+id/login"
+            android:name="com.timenoteco.timenote.view.loginFlow.Login"
+            android:label="fragment_login"
+            tools:layout="@layout/fragment_login">
+            <action
+                android:id="@+id/action_login_to_signup"
+                app:destination="@id/signup" />
+            <argument
+                android:name="x"
+                app:argType="boolean" />
+        </fragment>
+        <fragment
+            android:id="@+id/preferenceSubCategory"
+            android:name="com.timenoteco.timenote.view.loginFlow.PreferenceSubCategory"
+            android:label="fragment_preference_sub_category"
+            tools:layout="@layout/fragment_preference_sub_category">
+            <action
+                android:id="@+id/action_preferenceSubCategory_to_preferenceSuggestion"
+                app:destination="@id/preferenceSuggestion" />
+            <argument
+                android:name="isInLogin"
+                app:argType="boolean" />
+        </fragment>
+        <fragment
+            android:id="@+id/preferenceSuggestion"
+            android:name="com.timenoteco.timenote.view.loginFlow.PreferenceSuggestion"
+            android:label="fragment_preference_suggestion"
+            tools:layout="@layout/fragment_preference_suggestion">
+            <argument
+                android:name="isInLogin"
+                app:argType="boolean" />
+        </fragment>
+        <fragment
+            android:id="@+id/preferenceCategory"
+            android:name="com.timenoteco.timenote.view.loginFlow.PreferenceCategory"
+            android:label="fragment_preference_category"
+            tools:layout="@layout/fragment_preference_category">
+            <action
+                android:id="@+id/action_preferenceCategory_to_preferenceSubCategory"
+                app:destination="@id/preferenceSubCategory" />
+            <argument
+                android:name="isInLogin"
+                app:argType="boolean" />
+        </fragment>
+        <fragment
+            android:id="@+id/signup"
+            android:name="com.timenoteco.timenote.view.loginFlow.Signup"
+            android:label="Signup">
+            <action
+                android:id="@+id/action_signup_to_preferenceCategory"
+                app:destination="@id/preferenceCategory" />
+        </fragment>
+    </navigation>
     <fragment
         android:id="@+id/createTimenote"
         android:name="com.timenoteco.timenote.view.createTimenoteFlow.CreateTimenote"
@@ -26,6 +83,9 @@
             android:name="timenoteBody"
             app:argType="com.timenoteco.timenote.model.TimenoteBody"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_createTimenote_to_navigation"
+            app:destination="@id/navigation" />
     </fragment>
     <fragment
         android:id="@+id/previewTimenoteCreated"
