--- a/app/src/main/res/drawable/home_menu_item.xml
+++ b/app/src/main/res/drawable/home_menu_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!--Clicked-->
-    <item android:drawable="@drawable/ic_home_clicked_bnv" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_accueil_grad_ok" android:state_checked="true" />
     <!--Not Clicked-->
-    <item android:drawable="@drawable/ic_home_bnv" android:state_checked="false" />
+    <item android:drawable="@drawable/ic_accueil_ok" android:state_checked="false" />
 </selector>
