--- a/app/src/main/res/drawable/ic_linkedin.xml
+++ b/app/src/main/res/drawable/ic_linkedin.xml
@@ -1,5 +1,7 @@
-<vector android:autoMirrored="true" android:height="36dp"
-    android:viewportHeight="512" android:viewportWidth="512"
-    android:width="36dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="m256,0c-141.363,0 -256,114.637 -256,256s114.637,256 256,256 256,-114.637 256,-256 -114.637,-256 -256,-256zM181.609,387h-62.348v-187.574h62.348zM150.438,173.813h-0.406c-20.922,0 -34.453,-14.402 -34.453,-32.402 0,-18.406 13.945,-32.41 35.273,-32.41 21.328,0 34.453,14.004 34.859,32.41 0,18 -13.531,32.402 -35.273,32.402zM406.422,387h-62.34v-100.348c0,-25.219 -9.027,-42.418 -31.586,-42.418 -17.223,0 -27.48,11.602 -31.988,22.801 -1.648,4.008 -2.051,9.609 -2.051,15.215v104.75h-62.344s0.816,-169.977 0,-187.574h62.344v26.559c8.285,-12.781 23.109,-30.961 56.188,-30.961 41.02,0 71.777,26.809 71.777,84.422zM406.422,387"/>
+<vector android:height="24dp" android:viewportHeight="22.34"
+    android:viewportWidth="22.34" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M7.51,9.79h1.75v5.26h-1.75z"/>
+    <path android:fillColor="#FF000000" android:pathData="M13.55,9.66a1.73,1.73 0,0 0,-1.57 0.87V9.79H10.23c0,0.49 0,5.26 0,5.26H12V12.11a1.15,1.15 0,0 1,0.06 -0.43,1 1,0 0,1 0.89,-0.64c0.63,0 0.89,0.49 0.89,1.19v2.82h1.75V12C15.57,10.42 14.7,9.66 13.55,9.66Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M8.4,7.25a0.92,0.92 0,0 0,-1 0.91,0.9 0.9,0 0,0 1,0.91h0a0.91,0.91 0,1 0,0 -1.82Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M11.17,0A11.17,11.17 0,1 0,22.34 11.17,11.17 11.17,0 0,0 11.17,0ZM17.39,16.12a0.84,0.84 0,0 1,-0.86 0.83h-10a0.85,0.85 0,0 1,-0.87 -0.83v-10a0.86,0.86 0,0 1,0.87 -0.84h10a0.85,0.85 0,0 1,0.86 0.84Z"/>
 </vector>
