--- a/app/src/main/res/layout-sw300dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw300dp/item_timenote.xml
@@ -208,7 +208,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/ic_chat"
+        android:src="@drawable/ic_commentaires"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timenote_buy" />
 
@@ -217,7 +217,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:src="@drawable/ic_share"
+        android:src="@drawable/ic_partage"
         app:layout_constraintBottom_toBottomOf="@id/timenote_like"
         app:layout_constraintStart_toEndOf="@id/timenote_like"
         app:layout_constraintTop_toTopOf="@id/timenote_like" />
@@ -239,7 +239,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_add_circle_black_24dp"
+        android:src="@drawable/ic_ajout_cal"
         app:layout_constraintBottom_toBottomOf="@id/timenote_like"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/timenote_like" />
