--- a/app/src/main/res/layout-sw380dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote.xml
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_more_vert_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -207,7 +207,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/ic_chat"
+        android:src="@drawable/ic_commentaires"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timenote_buy" />
 
@@ -215,8 +215,8 @@
         android:id="@+id/timenote_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:src="@drawable/ic_share"
+        android:layout_marginStart="12dp"
+        android:src="@drawable/ic_partage"
         app:layout_constraintBottom_toBottomOf="@id/timenote_like"
         app:layout_constraintStart_toEndOf="@id/timenote_like"
         app:layout_constraintTop_toTopOf="@id/timenote_like" />
@@ -238,7 +238,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_add_circle_black_24dp"
+        android:src="@drawable/ic_ajout_cal"
         app:layout_constraintBottom_toBottomOf="@id/timenote_like"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/timenote_like" />
