--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -43,6 +43,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:paddingBottom="24dp"
+        android:clipToPadding="false"
         app:layout_constraintTop_toBottomOf="@id/create_timenote_ll"
         android:layout_width="0dp"
         android:layout_height="0dp">
@@ -274,8 +276,8 @@
                         android:fontFamily="sans-serif-light"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_a_description"
-                        android:textColor="@android:color/darker_gray"
+                        android:hint="@string/add_a_description"
+                        android:textColor="@color/colorText"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -553,24 +555,44 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:visibility="visible"
+                android:id="@+id/url_cardview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="12dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/paid_timenote_cardview">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp">
+
                     <TextView
-                        android:visibility="gone"
+                        android:id="@+id/create_timenote_url_btn"
                         android:fontFamily="sans-serif-light"
-                        android:id="@+id/create_timenote_paid_timenote_status_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/add_an_url"
                         android:textColor="@color/colorText"
                         android:textSize="14sp"
-                        tools:text="www.google.com"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toBottomOf="@id/create_timenote_paid_timenote_label"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        app:layout_constraintTop_toTopOf="parent" />
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
