--- a/app/src/main/res/layout/fragment_near_by.xml
+++ b/app/src/main/res/layout/fragment_near_by.xml
@@ -71,7 +71,7 @@
                         android:shadowDx="1"
                         android:shadowDy="1"
                         android:shadowRadius="1.5"
-                        android:text="Tel Aviv"
+                        tools:text="Tel Aviv"
                         android:textColor="@android:color/black"
                         android:textSize="17sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
                         android:shadowDx="1"
                         android:shadowDy="1"
                         android:shadowRadius="1.5"
-                        android:text="Today"
+                        tools:text="Today"
                         android:textColor="@android:color/black"
                         android:textSize="17sp"
                         app:layout_constraintEnd_toEndOf="parent"
