--- a/app/src/main/res/layout/fragment_nearby_filters.xml
+++ b/app/src/main/res/layout/fragment_nearby_filters.xml
@@ -69,7 +69,7 @@
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_category_tv"
                 android:drawablePadding="8dp"
-                android:textColor="@color/colorTextSecondary"
+                android:textColor="@color/colorText"
                 android:textSize="14sp"
                 android:text="@string/none"
                 app:layout_constraintTop_toTopOf="parent"
@@ -113,7 +113,7 @@
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_from_tv"
                 android:drawablePadding="8dp"
-                android:textColor="@color/colorTextSecondary"
+                android:textColor="@color/colorText"
                 android:textSize="14sp"
                 tools:text="Public"
                 app:layout_constraintTop_toTopOf="parent"
@@ -157,7 +157,7 @@
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_paid_timenote_tv"
                 android:drawablePadding="8dp"
-                android:textColor="@color/colorTextSecondary"
+                android:textColor="@color/colorText"
                 android:textSize="14sp"
                 tools:text="Free and Paid"
                 app:layout_constraintTop_toTopOf="parent"
@@ -224,6 +224,96 @@
 
     </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/nearby_filter_when"
+        app:cardElevation="5dp"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/nearby_filter_distance"
+        android:layout_marginHorizontal="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:drawablePadding="8dp"
+                android:textColor="@color/colorText"
+                android:textSize="14sp"
+                android:text="@string/when"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/nearby_filter_when_tv"
+                android:drawablePadding="8dp"
+                android:textColor="@color/colorText"
+                android:textSize="14sp"
+                tools:text="Today"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/nearby_filter_where"
+        app:cardElevation="5dp"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/nearby_filter_when"
+        android:layout_marginHorizontal="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:drawablePadding="8dp"
+                android:textColor="@color/colorText"
+                android:textSize="14sp"
+                android:text="@string/where"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:ellipsize="end"
+                android:maxLength="30"
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/nearby_filter_where_tv"
+                android:drawablePadding="8dp"
+                android:textColor="@color/colorText"
+                android:textSize="14sp"
+                tools:text="Tel Aviv"
+                android:maxLines="1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
