--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -31,13 +31,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <mehdi.sakout.fancybuttons.FancyButton
-        fancy:fb_defaultColor="@color/colorAccentCustom"
-        fancy:fb_radius="5dp"
-        fancy:fb_text="@string/follow"
+    <ImageView
+        android:src="@drawable/ic_add_circle_black_24dp"
         android:paddingVertical="6dp"
         android:paddingHorizontal="24dp"
-        fancy:fb_textColor="@color/white"
         android:gravity="center"
         android:layout_marginEnd="15dp"
         app:layout_constraintEnd_toEndOf="parent"
