--- a/app/src/main/res/navigation/nav_host_fragment_main.xml
+++ b/app/src/main/res/navigation/nav_host_fragment_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/blankFragment"
-        android:name="com.timenoteco.timenote.BlankFragment"
+        android:name="com.timenoteco.timenote.view.BlankFragment"
         android:label="fragment_blank"
         tools:layout="@layout/fragment_blank" />
 
