--- a/app/src/main/res/layout/item_pref_sub_category_chip.xml
+++ b/app/src/main/res/layout/item_pref_sub_category_chip.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content"
     tools:text="SPORT"
     android:layout_margin="4dp"
-    app:mcv_backgroundColor="@color/colorAccentCustom"
+    app:mcv_backgroundColor="@color/colorStartGradient"
     app:mcv_closeColor="@android:color/white"
     app:mcv_textColor="@android:color/white"
-    app:mcv_selectedBackgroundColor="@color/colorAccentCustom"
+    app:mcv_selectedBackgroundColor="@color/colorStartGradient"
     app:mcv_closable="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
