--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#5A599D</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#ffcc33</color>
-    <color name="colorText">#000000</color>
+    <color name="colorText">#FFFFFF</color>
     <color name="colorTextSecondary">#5A599D</color>
     <color name="colorTextThirdly">#4A90E2</color>
     <color name="colorBackgroundForward">#103700B3</color>
@@ -12,9 +12,8 @@
     <color name="colorStartGradient">#09539d</color>
     <color name="colorEndGradient">#892981</color>
     <color name="colorYellow">#ffcc33</color>
-    <color name="colorBackground">#FFFFFF</color>
-    <color name="colorToolbar">#FFFFFF</color>
-    <color name="colorDivider">#60000000</color>
-
+    <color name="colorBackground">#121212</color>
+    <color name="colorToolbar">#212121</color>
+    <color name="colorDivider">#60FFFFFF</color>
 
 </resources>
