--- a/app/src/main/res/layout-sw300dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw300dp/fragment_detailed_fragment.xml
@@ -108,12 +108,12 @@
         app:layout_constraintTop_toTopOf="@id/separator_2" />
 
     <TextView
-        android:id="@+id/detailed_timenote_year"
+        android:id="@+id/timenote_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="12dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
@@ -130,15 +130,15 @@
         android:id="@+id/separator_1"
         android:layout_width="2dp"
         android:layout_height="48dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
         app:layout_constraintBottom_toBottomOf="@id/detailed_timenote_vp"
         app:layout_constraintStart_toStartOf="@id/detailed_timenote_vp" />
 
     <TextView
-        android:id="@+id/detailed_timenote_day_month"
+        android:id="@+id/timenote_day_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
@@ -147,7 +147,7 @@
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
-        android:text="11\nAug"
+        android:text="11 Aug\n15:30"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
@@ -159,20 +159,20 @@
         android:id="@+id/separator_2"
         android:layout_width="2dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
         app:layout_constraintBottom_toBottomOf="@id/detailed_timenote_vp"
         app:layout_constraintEnd_toEndOf="@id/detailed_timenote_vp" />
 
     <TextView
-        android:id="@+id/detailed_timenote_time"
+        android:id="@+id/timenote_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
@@ -183,6 +183,24 @@
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
         app:layout_constraintStart_toEndOf="@id/separator_2"
         app:layout_constraintTop_toTopOf="@id/separator_2" />
+
+    <TextView
+        android:visibility="invisible"
+        android:id="@+id/timenote_in_label"
+        android:fontFamily="sans-serif-light"
+        android:textSize="16sp"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="1.5"
+        android:textColor="@android:color/white"
+        tools:text="In 2 days and 23 hours"
+        app:layout_constraintEnd_toEndOf="@id/detailed_timenote_vp"
+        app:layout_constraintStart_toStartOf="@id/detailed_timenote_vp"
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
+        app:layout_constraintTop_toTopOf="@id/separator_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/detailed_timenote_buy"
@@ -302,7 +320,7 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/card_line_0"
         app:layout_constraintTop_toBottomOf="@id/detailed_timenote_username_desc"
         android:layout_width="match_parent"
         android:layout_height="0dp">
@@ -314,4 +332,37 @@
             android:layout_height="wrap_content"/>
 
 </androidx.core.widget.NestedScrollView>
+
+    <TextView
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/card_line_0"
+        app:layout_constraintBottom_toTopOf="@id/comments_edittext"
+        style="@style/AppTheme.Divider.Toolbar"/>
+
+    <EditText
+        android:fontFamily="sans-serif-light"
+        android:textSize="15sp"
+        android:padding="12dp"
+        android:hint="@string/add_a_comment"
+        android:background="@android:color/transparent"
+        android:id="@+id/comments_edittext"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/colorText"
+        android:text="@string/publish"
+        app:layout_constraintTop_toTopOf="@id/comments_edittext"
+        android:textSize="14sp"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="@id/comments_edittext"
+        app:layout_constraintBottom_toBottomOf="@id/comments_edittext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
