--- a/app/src/main/res/layout/adapter_timenote_recent.xml
+++ b/app/src/main/res/layout/adapter_timenote_recent.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -20,6 +20,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:paddingEnd="8dp"
+        android:background="@color/colorBackground"
         android:clipToPadding="false"
         android:id="@+id/home_recent_rv"
         app:layout_constraintStart_toStartOf="parent"
