--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -26,10 +26,10 @@
 
             <TextView
                 android:fontFamily="sans-serif-light"
-                android:drawableStart="@drawable/ic_baseline_keyboard_arrow_left_24"
+                android:drawableStart="@drawable/ic_back_thin"
                 android:id="@+id/create_timenote_btn_back"
                 style="@style/AppTheme.Toolbar.TextRight"
-                android:text="@string/back" />
+                android:text="" />
 
 
         </androidx.appcompat.widget.Toolbar>
@@ -39,6 +39,7 @@
     </LinearLayout>
 
     <ScrollView
+        android:background="@color/colorBackground"
         android:id="@+id/create_timenote_scrollview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -465,6 +466,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
+                    <TextView
+                        android:text="Only me"
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/create_timenote_share_with"
+                        android:drawablePadding="8dp"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="14sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
@@ -500,10 +513,11 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:text="None"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_category"
                         android:drawablePadding="8dp"
-                        android:textColor="@color/colorText"
+                        android:textColor="@android:color/darker_gray"
                         android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -545,9 +559,10 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:text="No answer"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_paid_timenote_status_no_answer"
-                        android:textColor="@color/colorText"
+                        android:textColor="@android:color/darker_gray"
                         android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="@id/create_timenote_paid_timenote_label"
                         app:layout_constraintBottom_toBottomOf="@id/create_timenote_paid_timenote_label"
