--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,12 +2,10 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/white"
     android:layout_height="match_parent">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:background="@android:color/white"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -39,6 +37,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/white"
         android:id="@+id/home_recent_rv"
         app:layout_constraintBottom_toTopOf="@id/home_rv"
         app:layout_constraintTop_toBottomOf="@id/home_ll"
@@ -49,6 +48,7 @@
         android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/white"
         tools:listitem="@layout/item_timenote"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
