--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/login_image"
         android:scaleType="centerCrop"
-        android:src="@drawable/audiance"
+        android:src="@drawable/gradient_futur"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -24,7 +24,7 @@
         android:shadowDx="1.0"
         android:shadowDy="1.0"
         android:shadowColor="@color/colorText"
-        android:text="Timenote"
+        android:text="Dayzee"
         android:textColor="@color/white"
         android:textSize="72sp"
         android:id="@+id/timenote_label"
