--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -30,7 +30,6 @@
 
     </LinearLayout>
 
-
     <ImageView
         android:id="@+id/profile_menu_iv"
         android:src="@drawable/beach"
@@ -104,7 +103,7 @@
                 android:id="@+id/menu_setting_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_reglages_ok"
+                android:src="@drawable/ic_reg_grad_ok"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -144,7 +143,7 @@
                 android:id="@+id/menu_invite_friends_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_ajout_profil_ok"
+                android:src="@drawable/ic_add_friends_grad_ok"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -187,7 +186,7 @@
                 android:id="@+id/menu_profile_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_profil_ok"
+                android:src="@drawable/ic_prof_prev_ok"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -228,7 +227,7 @@
                 android:id="@+id/menu_preferences_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_categorie_ok"
+                android:src="@drawable/ic_cat_grad_ok"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
