--- a/app/src/main/res/layout/fragment_nearby_filters.xml
+++ b/app/src/main/res/layout/fragment_nearby_filters.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -212,12 +212,12 @@
                 app:isb_thumb_color="@color/colorAccent"
                 app:isb_thumb_size="10dp"
                 app:isb_show_indicator="rounded_rectangle"
-                app:isb_indicator_color="#5A599D"
+                app:isb_indicator_color="@color/colorStartGradient"
                 app:isb_indicator_text_color="@android:color/white"
                 app:isb_indicator_text_size="14sp"
                 app:isb_track_background_color="@android:color/darker_gray"
                 app:isb_track_background_size="13dp"
-                app:isb_track_progress_color="#995A599D"
+                app:isb_track_progress_color="@color/colorStartGradient"
                 app:isb_track_progress_size="5dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
