--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,6 +19,7 @@
         app:mt_hintColor="@android:color/darker_gray"
         app:mt_textColor="@android:color/black"
         app:mt_placeholder="Search"
+        android:background="@color/colorBackground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,6 +34,7 @@
         android:id="@+id/searchBar" />
 
     <com.google.android.material.tabs.TabLayout
+        app:tabTextColor="@color/tab_selector"
         app:tabIndicatorHeight="1dp"
         app:layout_constraintTop_toBottomOf="@id/searchBar"
         app:layout_constraintStart_toStartOf="parent"
