--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:scaleType="centerCrop"
-        android:src="@drawable/audiance"
+        android:src="@drawable/gradient_futur"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -37,7 +37,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@android:color/transparent"
-                android:text="Timenote Connection"
+                android:text="Dayzee Connection"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:id="@+id/signup_status"
