--- a/app/src/main/res/layout/item_pref_sub_category.xml
+++ b/app/src/main/res/layout/item_pref_sub_category.xml
@@ -36,12 +36,12 @@
         app:isb_thumb_color="@color/colorAccent"
         app:isb_thumb_size="10dp"
         app:isb_show_indicator="rounded_rectangle"
-        app:isb_indicator_color="#5A599D"
+        app:isb_indicator_color="@color/colorStartGradient"
         app:isb_indicator_text_color="@android:color/white"
         app:isb_indicator_text_size="14sp"
         app:isb_track_background_color="@android:color/darker_gray"
         app:isb_track_background_size="13dp"
-        app:isb_track_progress_color="#995A599D"
+        app:isb_track_progress_color="@color/colorStartGradient"
         app:isb_track_progress_size="5dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
