--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -170,7 +170,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:background="@color/colorText"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="@id/profile_followers_label"
                         app:layout_constraintTop_toTopOf="@id/profile_nbr_followers">
@@ -179,7 +178,7 @@
                             android:id="@+id/profile_calendar_btn"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/profile_calendar"
+                            android:src="@drawable/ic_cal_vide_grad"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -202,6 +201,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-light"
+                            android:layout_marginTop="1dp"
                             android:textColor="@color/colorText"
                             android:textSize="10sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -242,10 +242,12 @@
                         android:paddingHorizontal="18dp"
                         android:paddingVertical="4dp"
                         android:visibility="visible"
-                        app:fb_defaultColor="#ffcc33"
+                        app:fb_defaultColor="@android:color/transparent"
+                        app:fb_borderColor="@android:color/darker_gray"
+                        app:fb_borderWidth="1dp"
                         app:fb_radius="5dp"
                         app:fb_text="@string/modify"
-                        app:fb_textColor="@android:color/white"
+                        app:fb_textColor="@android:color/darker_gray"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/profile_pic_imageview" />
@@ -274,6 +276,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-light"
+                        android:textColor="@color/colorText"
                         android:text="Founder of Timenote"
                         android:textSize="15sp"
                         app:layout_constraintEnd_toEndOf="parent"
