--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,6 +13,7 @@
     <attr name="colorToolbar" format="reference|color"/>
     <attr name="colorDivider" format="reference|color"/>
     <attr name="colorBackgroundSettings" format="reference|color"/>
+    <attr name="colorElevated" format="reference|color"/>
 
     <declare-styleable name="ExpandIconView">
         <attr name="eiv_roundedCorners" format="boolean"/>
