--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,7 @@
         <item name="colorToolbar">@color/colorToolbar</item>
         <item name="colorDivider">@color/colorDivider</item>
         <item name="colorBackgroundSettings">@color/colorBackgroundSettings</item>
+        <item name="colorElevated">@color/colorElevated</item>
     </style>
 
 
