--- a/app/src/main/res/layout-sw380dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw380dp/fragment_detailed_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.homeFlow.DetailedTimenote">
 
@@ -26,7 +26,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:fontFamily="sans-serif-light"
                     android:drawableStart="@drawable/ic_back_thin"
-                    android:id="@+id/create_timenote_btn_back"
+                    android:id="@+id/detailed_timenote_btn_back"
                     android:text="" />
 
             <TextView
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:text="Samuel"
                 android:id="@+id/detailed_timenote_username"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorText"
                 android:textSize="17sp"/>
 
                 <ImageView
@@ -56,7 +56,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginEnd="8dp"
-                    android:src="@drawable/ic_more_vert_black_24dp"
+                    android:src="@drawable/ic_more_vert_black_profile_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -205,7 +205,7 @@
         android:id="@+id/detailed_timenote_buy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccentCustom"
+        android:background="@color/colorYellow"
         android:fontFamily="sans-serif-light"
         android:gravity="end"
         android:paddingHorizontal="8dp"
