--- a/app/src/main/res/layout/adapter_pref_sub_category_card.xml
+++ b/app/src/main/res/layout/adapter_pref_sub_category_card.xml
@@ -5,7 +5,7 @@
     app:cardCornerRadius="10dp"
     android:padding="8dp"
     android:layout_margin="8dp"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     android:elevation="4dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -36,6 +36,7 @@
             style="@style/AppTheme.Divider.Toolbar"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:background="@color/colorBackground"
             tools:listitem="@layout/item_pref_sub_category"
             android:id="@+id/pref_sub_category_rv"
             app:layout_constraintTop_toBottomOf="@id/card_line"
