--- a/app/src/main/res/layout/adapter_suggestion_card.xml
+++ b/app/src/main/res/layout/adapter_suggestion_card.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="10dp"
     android:padding="8dp"
+    app:cardBackgroundColor="@color/colorBackground"
     android:layout_margin="8dp"
     app:cardElevation="4dp"
+    app:strokeWidth="1dp"
+    app:strokeColor="@color/colorElevated"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:targetApi="lollipop">
@@ -33,6 +37,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:clipToPadding="false"
             android:paddingBottom="8dp"
+            android:background="@color/colorBackground"
             android:id="@+id/suggestion_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
