--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -10,7 +10,8 @@
 
     <LinearLayout
         android:id="@+id/create_timenote_ll"
-        style="@style/AppTheme.Toolbar.LinearLayout">
+        style="@style/AppTheme.Toolbar.LinearLayout"
+        tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
@@ -219,10 +220,11 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/title_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/colorBackground"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="24dp"
                 app:cardCornerRadius="5dp"
@@ -252,13 +254,14 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:visibility="gone"
                 android:id="@+id/desc_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/colorBackground"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="12dp"
                 app:cardCornerRadius="5dp"
@@ -286,14 +289,15 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/when_cardview"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:cardBackgroundColor="@color/colorBackground"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="12dp"
                 app:layout_constraintTop_toBottomOf="@id/desc_cardview"
@@ -400,9 +404,10 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
+                android:background="@color/colorBackground"
                 android:id="@+id/where_cardview"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
@@ -434,14 +439,15 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/share_with_cardview"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:cardBackgroundColor="@color/colorBackground"
                 android:layout_marginTop="12dp"
                 app:layout_constraintTop_toBottomOf="@id/where_cardview"
                 android:layout_marginHorizontal="24dp"
@@ -480,9 +486,9 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/category_cardview"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
@@ -526,12 +532,13 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/paid_timenote_cardview"
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="@color/colorBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="12dp"
@@ -572,12 +579,13 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:visibility="visible"
                 android:id="@+id/url_cardview"
                 android:layout_width="match_parent"
+                app:cardBackgroundColor="@color/colorBackground"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="12dp"
@@ -608,7 +616,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
