--- a/app/src/main/res/layout/fragment_preference_category.xml
+++ b/app/src/main/res/layout/fragment_preference_category.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent"
     tools:context=".view.loginFlow.PreferenceCategory">
 
@@ -14,8 +14,8 @@
     <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
         <TextView
-            style="@style/AppTheme.Toolbar.Title"
-            tools:text="Preferrence" />
+            android:textColor="@color/colorText"
+            style="@style/AppTheme.Toolbar.Title"/>
 
         <TextView
             android:fontFamily="sans-serif-light"
