--- a/app/src/main/res/layout/fragment_preference_sub_category.xml
+++ b/app/src/main/res/layout/fragment_preference_sub_category.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.loginFlow.PreferenceSubCategory">
 
@@ -47,6 +47,7 @@
         </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:background="@color/colorBackground"
                 android:paddingHorizontal="8dp"
                 android:clipToPadding="false"
                 android:layout_marginVertical="8dp"
@@ -72,6 +73,7 @@
                 app:layout_constraintTop_toBottomOf="@id/pref_sub_category_rv_chips" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:background="@color/colorBackground"
                 android:padding="16dp"
                 tools:listitem="@layout/adapter_pref_sub_category_card"
                 android:id="@+id/pref_sub_category_card_rv"
