--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         android:id="@+id/profile_settings_ll"
-        style="@style/AppTheme.Toolbar.LinearLayout">
+        style="@style/AppTheme.Toolbar.LinearLayout"
+        tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.Toolbar
             style="@style/AppTheme.Toolbar">
@@ -53,7 +54,7 @@
 
             <TextView
                 android:fontFamily="sans-serif-light"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:id="@+id/profile_settings_edit_personnal_infos"
                 android:padding="16dp"
                 android:textColor="@color/colorText"
@@ -68,12 +69,13 @@
             <TextView
                 android:id="@+id/card_line_0"
                 app:layout_constraintTop_toBottomOf="@id/profile_settings_edit_personnal_infos"
-                style="@style/AppTheme.Divider.Toolbar" />
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_change_password"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:textColor="@color/colorText"
                 android:text="@string/change_password"
@@ -86,11 +88,12 @@
             <TextView
                 android:id="@+id/card_line_1"
                 app:layout_constraintTop_toBottomOf="@id/profile_settings_change_password"
-                style="@style/AppTheme.Divider.Toolbar"/>
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/private_account_cl"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@id/card_line_1"
                 app:layout_constraintStart_toStartOf="parent"
@@ -123,12 +126,13 @@
             <TextView
                 android:id="@+id/card_line_2"
                 app:layout_constraintTop_toBottomOf="@id/private_account_cl"
-                style="@style/AppTheme.Divider.Toolbar"/>
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_asked_sent"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:textColor="@color/colorText"
                 android:text="@string/asked_sent"
@@ -154,7 +158,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_marginTop="8dp"
                 android:id="@+id/push_notification_cl"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@id/push_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -186,11 +190,12 @@
             <TextView
                 android:id="@+id/card_line_3"
                 app:layout_constraintTop_toBottomOf="@id/push_notification_cl"
-                style="@style/AppTheme.Divider.Toolbar"/>
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/push_notification_certified_cl"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@id/card_line_3"
                 app:layout_constraintStart_toStartOf="parent"
@@ -222,12 +227,13 @@
             <TextView
                 android:id="@+id/card_line_6"
                 app:layout_constraintTop_toBottomOf="@id/push_notification_certified_cl"
-                style="@style/AppTheme.Divider.Toolbar"/>
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_notification_manager"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:textColor="@color/colorText"
                 android:text="@string/notification_manager_settings"
@@ -254,7 +260,7 @@
                 android:fontFamily="sans-serif-light"
                 android:layout_marginTop="8dp"
                 android:id="@+id/profile_settings_date_format"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:textColor="@color/colorText"
                 android:text="@string/timenote_date_format"
@@ -267,12 +273,13 @@
             <TextView
                 android:id="@+id/card_line_4"
                 app:layout_constraintTop_toBottomOf="@id/profile_settings_date_format"
-                style="@style/AppTheme.Divider.Toolbar"/>
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_timenote_format"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:textColor="@color/colorText"
                 android:text="@string/timenote_visibility_format"
@@ -285,13 +292,14 @@
             <TextView
                 android:id="@+id/card_line_5"
                 app:layout_constraintTop_toBottomOf="@id/profile_settings_timenote_format"
-                style="@style/AppTheme.Divider.Toolbar"/>
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
 
 
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_timenote_visibility"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:textColor="@color/colorText"
                 android:text="@string/timenote_visibility"
@@ -317,7 +325,7 @@
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_confidentiality_politic"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:layout_marginTop="8dp"
                 android:textColor="@color/colorText"
@@ -331,12 +339,13 @@
             <TextView
                 android:id="@+id/card_line_7"
                 app:layout_constraintTop_toBottomOf="@id/profile_settings_confidentiality_politic"
-                style="@style/AppTheme.Divider.Toolbar"/>
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_send_comments"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:textColor="@color/colorText"
                 android:text="@string/send_comments"
@@ -353,7 +362,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="72dp"
-                android:background="@color/colorBackground"
+                android:background="@color/colorElevated"
                 android:padding="16dp"
                 android:gravity="center"
                 android:text="@string/disconnect"
