--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -16,7 +16,7 @@
     <androidx.cardview.widget.CardView
         app:cardElevation="0dp"
         android:id="@+id/signup_cv"
-        app:cardBackgroundColor="#60000000"
+        app:cardBackgroundColor="@color/colorDivider"
         app:cardCornerRadius="10dp"
         android:background="@android:color/holo_red_dark"
         android:layout_marginHorizontal="24dp"
@@ -38,7 +38,7 @@
                 android:layout_marginTop="16dp"
                 android:background="@android:color/transparent"
                 android:text="Dayzee Connection"
-                android:textColor="@color/white"
+                android:textColor="@color/colorBackground"
                 android:textSize="16sp"
                 android:id="@+id/signup_status"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginHorizontal="16dp"
                 tools:text="Fill in all the fields in order to create your account"
-                android:textColor="@color/white"
+                android:textColor="@color/colorBackground"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/signup_status"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,22 +66,37 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginHorizontal="16dp"
                 android:textSize="14sp"
-                android:text="Email / Identifiant"
+                android:text="Email / Username"
                 android:id="@+id/email_label"
-                android:textColor="@color/white"
+                android:textColor="@color/colorBackground"
                 app:layout_constraintTop_toBottomOf="@id/signup_signup_info"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <EditText
+                android:visibility="invisible"
                 android:fontFamily="sans-serif-light"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/colorBackground"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Email"
                 android:textColorHint="#60FFFFFF"
                 android:id="@+id/signup_mail"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorBackground"
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@id/email_label"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <EditText
+                android:fontFamily="sans-serif-light"
+                android:backgroundTint="@color/colorBackground"
+                android:layout_marginHorizontal="12dp"
+                android:hint="Email / Username"
+                android:textColorHint="#60FFFFFF"
+                android:id="@+id/signin_mail_username"
+                android:textColor="@color/colorBackground"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/email_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +111,7 @@
                 android:textSize="14sp"
                 android:text="Email / Identifiant"
                 android:id="@+id/identifiant_label"
-                android:textColor="@color/white"
+                android:textColor="@color/colorBackground"
                 app:layout_constraintTop_toBottomOf="@id/signup_mail"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
@@ -105,8 +120,8 @@
             <EditText
                 android:visibility="gone"
                 android:fontFamily="sans-serif-light"
-                android:backgroundTint="@color/white"
-                android:textColor="@android:color/white"
+                android:backgroundTint="@color/colorBackground"
+                android:textColor="@color/colorBackground"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Username"
                 android:id="@+id/signup_identifiant"
@@ -121,7 +136,7 @@
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/signup_password_label"
                 android:textSize="14sp"
-                android:textColor="@color/white"
+                android:textColor="@color/colorBackground"
                 android:text="Password"
                 android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="16dp"
@@ -131,14 +146,32 @@
                 android:layout_height="wrap_content"/>
 
             <EditText
+                android:visibility="invisible"
                 android:fontFamily="sans-serif-light"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/colorBackground"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Password"
                 android:textSize="14sp"
+                android:inputType="textPassword"
                 android:textColorHint="#60FFFFFF"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorBackground"
                 android:id="@+id/signup_password"
+                app:layout_constraintTop_toBottomOf="@id/signup_password_label"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+            <EditText
+                android:fontFamily="sans-serif-light"
+                android:backgroundTint="@color/colorBackground"
+                android:layout_marginHorizontal="12dp"
+                android:hint="Password"
+                android:textSize="14sp"
+                android:inputType="textPassword"
+                android:textColorHint="#60FFFFFF"
+                android:textColor="@color/colorBackground"
+                android:id="@+id/signin_password"
                 app:layout_constraintTop_toBottomOf="@id/signup_password_label"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
@@ -151,14 +184,14 @@
                 android:layout_marginTop="4dp"
                 android:textSize="12sp"
                 android:id="@+id/signup_forgotten_password"
-                android:textColor="@color/white"
+                android:textColor="@color/colorBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/signup_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <mehdi.sakout.fancybuttons.FancyButton
-                fancy:fb_defaultColor="@android:color/white"
+                fancy:fb_defaultColor="@color/colorBackground"
                 fancy:fb_radius="90dp"
                 fancy:fb_text="Login"
                 android:layout_marginTop="16dp"
@@ -170,8 +203,6 @@
                 android:paddingVertical="6dp"
                 android:paddingHorizontal="48dp"
                 android:layout_marginBottom="16dp"
-                android:background="@color/colorPrimary"
-                android:textColor="@android:color/white"
                 android:layout_gravity="center"
                 android:id="@+id/signup_signin_btn"
                 android:layout_width="wrap_content"
@@ -181,7 +212,7 @@
             <mehdi.sakout.fancybuttons.FancyButton
                 fancy:fb_defaultColor="@android:color/transparent"
                 fancy:fb_borderWidth="2dp"
-                fancy:fb_borderColor="@color/white"
+                fancy:fb_borderColor="@color/colorBackground"
                 fancy:fb_radius="90dp"
                 fancy:fb_text="Sign Up"
                 android:layout_marginTop="16dp"
@@ -189,12 +220,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/signup_signin_btn"
-                fancy:fb_textColor="@color/white"
+                fancy:fb_textColor="@color/colorBackground"
                 android:paddingVertical="6dp"
                 android:paddingHorizontal="48dp"
                 android:layout_marginBottom="16dp"
-                android:background="@color/colorPrimary"
-                android:textColor="@android:color/white"
                 android:layout_gravity="center"
                 android:id="@+id/signup_signup_btn"
                 android:layout_width="wrap_content"
@@ -212,16 +241,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         fancy:fb_defaultColor="@android:color/transparent"
         fancy:fb_borderWidth="2dp"
-        fancy:fb_borderColor="@color/white"
+        fancy:fb_borderColor="@color/colorBackground"
         fancy:fb_radius="90dp"
         fancy:fb_text="ENTER AS A GUEST"
         android:layout_marginTop="16dp"
-        fancy:fb_textColor="@color/white"
+        fancy:fb_textColor="@color/colorBackground"
         android:paddingVertical="10dp"
         android:layout_marginBottom="72dp"
         android:layout_marginHorizontal="24dp"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
