--- a/app/src/main/res/layout-sw360dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_detailed_fragment.xml
@@ -306,8 +306,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:breakStrategy="simple"
-        android:ellipsize="end"
-        android:maxLines="2"
         android:textColor="@color/colorText"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@id/detailed_timenote_like"
@@ -320,7 +318,7 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/card_line_0"
+        app:layout_constraintBottom_toTopOf="@id/fragment_detailed_comment_ll"
         app:layout_constraintTop_toBottomOf="@id/detailed_timenote_username_desc"
         android:layout_width="match_parent"
         android:layout_height="0dp">
@@ -333,36 +331,37 @@
 
 </androidx.core.widget.NestedScrollView>
 
-    <TextView
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/card_line_0"
-        app:layout_constraintBottom_toTopOf="@id/comments_edittext"
-        style="@style/AppTheme.Divider.Toolbar"/>
-
-    <EditText
-        android:fontFamily="sans-serif-light"
-        android:textSize="15sp"
-        android:padding="12dp"
-        android:hint="@string/add_a_comment"
-        android:background="@android:color/transparent"
-        android:id="@+id/comments_edittext"
+    <LinearLayout
+        android:id="@+id/fragment_detailed_comment_ll"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginBottom="12dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:background="@drawable/circle_black_stroke_background_comment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:fontFamily="sans-serif-light"
-        android:textColor="@color/colorText"
-        android:text="@string/publish"
-        app:layout_constraintTop_toTopOf="@id/comments_edittext"
-        android:textSize="14sp"
-        android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="@id/comments_edittext"
-        app:layout_constraintBottom_toBottomOf="@id/comments_edittext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <EditText
+            android:background="@color/colorBackground"
+            android:layout_marginStart="12dp"
+            android:layout_marginVertical="12dp"
+            android:fontFamily="sans-serif-light"
+            android:textSize="13sp"
+            android:hint="@string/add_a_comment"
+            android:maxLines="2"
+            android:id="@+id/comments_edittext"
+            android:layout_weight="10"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:src="@drawable/ic_round_send_24"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
