--- a/app/src/main/res/layout/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout/fragment_detailed_fragment.xml
@@ -288,8 +288,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:breakStrategy="simple"
-        android:ellipsize="end"
-        android:maxLines="2"
         android:textColor="@color/colorText"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@id/detailed_timenote_like"
@@ -302,7 +300,7 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/fragment_detailed_comment_ll"
         app:layout_constraintTop_toBottomOf="@id/detailed_timenote_username_desc"
         android:layout_width="match_parent"
         android:layout_height="0dp">
@@ -314,4 +312,38 @@
             android:layout_height="wrap_content"/>
 
 </androidx.core.widget.NestedScrollView>
+
+    <LinearLayout
+        android:id="@+id/fragment_detailed_comment_ll"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginBottom="12dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:background="@drawable/circle_black_stroke_background_comment"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:background="@color/colorBackground"
+            android:layout_marginStart="12dp"
+            android:layout_marginVertical="12dp"
+            android:fontFamily="sans-serif-light"
+            android:textSize="13sp"
+            android:hint="@string/add_a_comment"
+            android:maxLines="2"
+            android:id="@+id/comments_edittext"
+            android:layout_weight="10"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:src="@drawable/ic_round_send_24"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
