--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,7 +25,7 @@
         android:shadowDy="1.0"
         android:shadowColor="@color/colorText"
         android:text="Dayzee"
-        android:textColor="@color/white"
+        android:textColor="@color/colorBackground"
         android:textSize="72sp"
         android:id="@+id/timenote_label"
         android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
         android:fontFamily="sans-serif-light"
         android:text="Start Scrolling Forward"
         android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textColor="@color/colorBackground"
         app:layout_constraintTop_toBottomOf="@id/timenote_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"/>
 
     <mehdi.sakout.fancybuttons.FancyButton
-        fancy:fb_defaultColor="@android:color/white"
+        fancy:fb_defaultColor="@color/colorBackground"
         fancy:fb_radius="90dp"
         fancy:fb_text="Login / Sign Up"
         android:layout_marginTop="8dp"
