--- a/app/src/main/res/layout/fragment_profil_modify.xml
+++ b/app/src/main/res/layout/fragment_profil_modify.xml
@@ -262,6 +262,7 @@
                     android:layout_height="wrap_content"/>
 
                 <Switch
+                    android:id="@+id/profile_modify_youtube_switch"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -299,6 +300,7 @@
                     android:layout_height="wrap_content"/>
 
                 <Switch
+                    android:id="@+id/profile_modify_facebook_switch"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -336,6 +338,7 @@
                     android:layout_height="wrap_content"/>
 
                 <Switch
+                    android:id="@+id/profile_modify_insta_switch"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -373,6 +376,7 @@
                     android:layout_height="wrap_content"/>
 
                 <Switch
+                    android:id="@+id/profile_modify_whatsapp_switch"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -410,6 +414,7 @@
                     android:layout_height="wrap_content"/>
 
                 <Switch
+                    android:id="@+id/profile_modify_linkedin_switch"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
